--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
   ],
   "require": {
     "php": "^5.5.9 || ^7.0",
-    "illuminate/contracts": "^5.0",
-    "illuminate/support": "^5.0",
+    "illuminate/contracts": "^5.0 || ^6.0",
+    "illuminate/support": "^5.0 || ^6.0",
     "mollie/mollie-api-php": "^1.9"
   },
   "require-dev": {
